server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tradeadviser
  labels:
    app: tradeadviser
